# agentic-mlops-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: PHASE1_COMPLETE.md
scripts/: quickstart.bat  quickstart.sh  setup_check.py  test_mlflow.py  train_cifar10.py  train_mnist.py
src/athena/: __init__.py  __main__.py
src/athena/config/: __init__.py  storage.py
src/athena/mlops/: __init__.py  mlflow_client.py  models.py
src/athena/utils/: __init__.py  logging.py  vector_store.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_models.py  test_storage.py
